--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Aishwarya Gurrala Muni | Portfolio</title>
+</head>
+
+<body style="font-family: Arial; max-width: 900px; margin: auto; padding: 40px;">
+
+  <h1>Aishwarya Gurrala Muni</h1>
+  <p>Business Analytics | AI | Data Analytics</p>
+
+  <h2>About Me</h2>
+  <p>
+    Business Analytics graduate with experience in data analysis,
+    machine learning, and end-to-end analytics projects.
+    Former Risk Analyst at Amazon, focused on building
+    data-driven solutions using Python, SQL, and R.
+  </p>
+
+  <h2>Skills</h2>
+  <ul>
+    <li>Python, R, SQL</li>
+    <li>Machine Learning, Statistics</li>
+    <li>Tableau, Power BI</li>
+    <li>ETL, Data Cleaning, Analytics</li>
+  </ul>
+
+  <h2>Projects</h2>
+  <ul>
+    <li>F1 Race Win Predictor</li>
+    <li>Customer Segmentation</li>
+    <li>Supply Chain Analytics</li>
+  </ul>
+
+  <h2>Links</h2>
+  <p>
+    <a href="https://github.com/aishwarya-gurrala">GitHub</a> |
+    <a href="https://www.linkedin.com/">LinkedIn</a>
+  </p>
+
+</body>
+</html>
 
