--- a/index.html
+++ b/index.html
@@ -1,43 +1,84 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Aishwarya Gurrala Muni | Portfolio</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Aishwarya Gurrala Muni | Data Portfolio</title>
+  <link rel="stylesheet" href="assets/style.css"/>
 </head>
+<body>
+  <header class="nav">
+    <div class="nav-inner">
+      <div class="brand">
+        <span class="dot"></span>
+        <div>
+          <div class="brand-title">Aishwarya Gurrala Muni</div>
+          <div class="brand-sub">Data Analytics · Data Engineering · ML/AI</div>
+        </div>
+      </div>
 
-<body style="font-family: Arial; max-width: 900px; margin: auto; padding: 40px;">
+      <nav class="nav-links">
+        <a class="pill active" href="index.html">Home</a>
+        <a class="pill" href="projects.html">Projects</a>
+        <a class="pill" href="insights.html">Insights</a>
+        <a class="pill" href="https://github.com/aishwarya-gurrala" target="_blank" rel="noopener">GitHub</a>
+      </nav>
+    </div>
+  </header>
 
-  <h1>Aishwarya Gurrala Muni</h1>
-  <p>Business Analytics | AI | Data Analytics</p>
+  <main class="container">
+    <section class="panel">
+      <h1>Data-centric portfolio</h1>
+      <p class="lead">
+        I build end-to-end data solutions—SQL transformations, Python pipelines, and ML models—
+        and present insights through clear dashboards and business-focused storytelling.
+      </p>
 
-  <h2>About Me</h2>
-  <p>
-    Business Analytics graduate with experience in data analysis,
-    machine learning, and end-to-end analytics projects.
-    Former Risk Analyst at Amazon, focused on building
-    data-driven solutions using Python, SQL, and R.
-  </p>
+      <div class="btnrow">
+        <a class="btn" href="projects.html">View Projects →</a>
+        <a class="btn secondary" href="insights.html">View Insights →</a>
+      </div>
+    </section>
 
-  <h2>Skills</h2>
-  <ul>
-    <li>Python, R, SQL</li>
-    <li>Machine Learning, Statistics</li>
-    <li>Tableau, Power BI</li>
-    <li>ETL, Data Cleaning, Analytics</li>
-  </ul>
+    <section class="panel">
+      <h2>Core Skills</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Data Analytics</h3>
+          <p>EDA, KPI design, experimentation thinking, trend & cohort analysis.</p>
+          <div class="tags"><span class="tag">Metrics</span><span class="tag">EDA</span><span class="tag">Insights</span></div>
+        </div>
+        <div class="card">
+          <h3>Data Engineering</h3>
+          <p>SQL modeling, joins/windows, ETL logic, data validation & documentation.</p>
+          <div class="tags"><span class="tag">SQL</span><span class="tag">ETL</span><span class="tag">Quality</span></div>
+        </div>
+        <div class="card">
+          <h3>ML / AI</h3>
+          <p>Regression/classification, feature engineering, evaluation, interpretability.</p>
+          <div class="tags"><span class="tag">Python</span><span class="tag">ML</span><span class="tag">Explainability</span></div>
+        </div>
+      </div>
+    </section>
 
-  <h2>Projects</h2>
-  <ul>
-    <li>F1 Race Win Predictor</li>
-    <li>Customer Segmentation</li>
-    <li>Supply Chain Analytics</li>
-  </ul>
+    <section class="panel">
+      <h2>Links</h2>
+      <div class="btnrow">
+        <a class="btn secondary" href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn (edit)</a>
+        <a class="btn secondary" href="mailto:youremail@example.com">Email (edit)</a>
+        <a class="btn secondary" href="assets/Aishwarya_Resume.pdf" target="_blank" rel="noopener">Resume PDF (add later)</a>
+      </div>
+      <p class="lead" style="font-size:14px;">Replace LinkedIn + email when ready. Resume can be uploaded to the assets folder.</p>
+    </section>
 
-  <h2>Links</h2>
-  <p>
-    <a href="https://github.com/aishwarya-gurrala">GitHub</a> |
-    <a href="https://www.linkedin.com/">LinkedIn</a>
-  </p>
+    <footer class="footer">
+      <div>© <span id="y"></span> Aishwarya Gurrala Muni</div>
+      <div>Hosted on GitHub Pages</div>
+    </footer>
+  </main>
 
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
-
