--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,92 @@
 
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Projects | Aishwarya Gurrala Muni</title>
+  <link rel="stylesheet" href="assets/style.css"/>
+</head>
+<body>
+  <header class="nav">
+    <div class="nav-inner">
+      <div class="brand">
+        <span class="dot"></span>
+        <div>
+          <div class="brand-title">Aishwarya Gurrala Muni</div>
+          <div class="brand-sub">Projects</div>
+        </div>
+      </div>
+
+      <nav class="nav-links">
+        <a class="pill" href="index.html">Home</a>
+        <a class="pill active" href="projects.html">Projects</a>
+        <a class="pill" href="insights.html">Insights</a>
+        <a class="pill" href="https://github.com/aishwarya-gurrala" target="_blank" rel="noopener">GitHub</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="panel">
+      <h1>Selected projects</h1>
+      <p class="lead">Each project is written as: Problem → Approach → Outcome (recruiter-friendly).</p>
+    </section>
+
+    <section class="panel">
+      <div class="grid">
+
+        <div class="card">
+          <h3>Boston Housing Price Prediction</h3>
+          <p><strong>Problem:</strong> Predict housing prices and identify key drivers.<br>
+             <strong>Approach:</strong> Cleaning, feature engineering, model comparison, evaluation.<br>
+             <strong>Outcome:</strong> Interpretable results + explainable drivers of price.</p>
+          <div class="tags">
+            <span class="tag">Python</span><span class="tag">Regression</span><span class="tag">Model Eval</span>
+          </div>
+          <div class="btnrow">
+            <a class="btn secondary" href="#" target="_blank" rel="noopener">GitHub (add link)</a>
+            <a class="btn secondary" href="#" target="_blank" rel="noopener">Demo (add link)</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>F1 Win Probability Predictor</h3>
+          <p><strong>Problem:</strong> Estimate win probability using race + driver context.<br>
+             <strong>Approach:</strong> Feature engineering, ML model, explainability.<br>
+             <strong>Outcome:</strong> Ranked drivers & factors influencing outcomes.</p>
+          <div class="tags">
+            <span class="tag">Python</span><span class="tag">ML</span><span class="tag">SHAP</span>
+          </div>
+          <div class="btnrow">
+            <a class="btn secondary" href="#" target="_blank" rel="noopener">GitHub (add link)</a>
+            <a class="btn secondary" href="#" target="_blank" rel="noopener">App (add link)</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>SQL + ETL: Analytics-Ready Tables</h3>
+          <p><strong>Problem:</strong> Convert raw transactions into trusted KPI tables.<br>
+             <strong>Approach:</strong> SQL joins/windows, transformations, QA checks.<br>
+             <strong>Outcome:</strong> Consistent metrics and faster dashboard refresh.</p>
+          <div class="tags">
+            <span class="tag">SQL</span><span class="tag">ETL</span><span class="tag">Data Quality</span>
+          </div>
+          <div class="btnrow">
+            <a class="btn secondary" href="#" target="_blank" rel="noopener">SQL Repo (add link)</a>
+          </div>
+        </div>
+
+      </div>
+      <p class="lead" style="font-size:14px;">Replace “add link” buttons with your real repo/app links.</p>
+    </section>
+
+    <footer class="footer">
+      <div>© <span id="y"></span> Aishwarya Gurrala Muni</div>
+      <div>Projects</div>
+    </footer>
+  </main>
+
+  <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
+</body>
+</html>
